--- a/index.html
+++ b/index.html
@@ -42,38 +42,38 @@
       </div>
     </section>
 
-    <!-- Why I Love You Section (Surprise #1) -->
+    <!-- Surprise Section 1: Reasons Why -->
     <section class="why-section" id="whySection">
       <div class="section-container">
-        <h2 class="section-title">Why I Love You So Much</h2>
+        <h2 class="section-title">Why I Fell for You</h2>
         <div class="reasons-grid">
           <div class="reason-card" style="--delay: 0s">
-            <span class="reason-number">01</span>
+            <span class="reason-icon">✨</span>
             <h3>Your Beautiful Soul</h3>
             <p>You light up every room with your kindness and warmth</p>
           </div>
           <div class="reason-card" style="--delay: 0.2s">
-            <span class="reason-number">02</span>
+            <span class="reason-icon">💫</span>
             <h3>Your Genuine Heart</h3>
             <p>Every moment with you feels like a blessing</p>
           </div>
           <div class="reason-card" style="--delay: 0.4s">
-            <span class="reason-number">03</span>
+            <span class="reason-icon">😊</span>
             <h3>Your Perfect Smile</h3>
             <p>It makes my heart skip a beat every single time</p>
           </div>
           <div class="reason-card" style="--delay: 0.6s">
-            <span class="reason-number">04</span>
+            <span class="reason-icon">💪</span>
             <h3>Your Strength</h3>
             <p>You inspire me to be better every day</p>
           </div>
           <div class="reason-card" style="--delay: 0.8s">
-            <span class="reason-number">05</span>
+            <span class="reason-icon">😄</span>
             <h3>Your Laughter</h3>
             <p>The sweetest sound that makes everything worthwhile</p>
           </div>
           <div class="reason-card" style="--delay: 1s">
-            <span class="reason-number">06</span>
+            <span class="reason-icon">💕</span>
             <h3>You Complete Me</h3>
             <p>With you, I found my forever person</p>
           </div>
@@ -81,58 +81,40 @@
       </div>
     </section>
 
-    <!-- Photo Gallery Section (Surprise #2) -->
-    <section class="gallery-section" id="gallery">
+    <!-- Surprise Section 2: Love Letter -->
+    <section class="love-letter-section" id="loveLetter">
       <div class="section-container">
-        <h2 class="section-title">Our Beautiful Moments</h2>
-        <div class="gallery-container">
-          <div class="photo-display">
-            <img src="/images/urmila.jpg" alt="Urmila" class="main-photo" />
-            <div class="photo-glow"></div>
-          </div>
-          <div class="gallery-info">
-            <h3>Every Moment With You</h3>
-            <p>
-              Is a moment I treasure forever. Your presence in my life has
-              changed everything for the better.
-            </p>
-            <div class="hearts-animation"></div>
-          </div>
+        <div class="letter-card">
+          <h2 class="letter-title">A Love Letter</h2>
+          <div class="letter-content" id="letterContent"></div>
+          <p class="letter-signature">Forever Yours,<br />Shubham ❤️</p>
+          <div class="letter-sparkles"></div>
         </div>
       </div>
     </section>
 
-    <!-- Love Story Section (Surprise #3) -->
-    <section class="love-story" id="loveStory">
+    <!-- Surprise Section 3: Love Quotes Gallery -->
+    <section class="quotes-section" id="quotesSection">
       <div class="section-container">
-        <h2 class="section-title">Our Love Story</h2>
-        <div class="story-timeline">
-          <div class="timeline-item">
-            <div class="timeline-dot"></div>
-            <div class="timeline-content">
-              <h3>The Beginning</h3>
-              <p>
-                The moment I saw you, I knew my life was about to change forever
-              </p>
-            </div>
+        <h2 class="section-title">What Love Means To Me</h2>
+        <div class="quotes-gallery">
+          <div class="quote-card" style="--delay: 0s">
+            <p>
+              "Love is not just a feeling, it's a choice I make every day with
+              you."
+            </p>
           </div>
-          <div class="timeline-item">
-            <div class="timeline-dot"></div>
-            <div class="timeline-content">
-              <h3>Falling Deeper</h3>
-              <p>
-                Every day with you makes me fall more in love with your spirit
-              </p>
-            </div>
+          <div class="quote-card" style="--delay: 0.3s">
+            <p>"You are my today and all my tomorrows."</p>
           </div>
-          <div class="timeline-item">
-            <div class="timeline-dot"></div>
-            <div class="timeline-content">
-              <h3>Forever Yours</h3>
-              <p>Now, I want to spend the rest of my life making you smile</p>
-            </div>
+          <div class="quote-card" style="--delay: 0.6s">
+            <p>"In you, I found the love of my life and my best friend."</p>
+          </div>
+          <div class="quote-card" style="--delay: 0.9s">
+            <p>"With you, forever doesn't seem long enough."</p>
           </div>
         </div>
+        <div class="rose-petals"></div>
       </div>
     </section>
 
@@ -140,7 +122,7 @@
     <section class="proposal-section" id="proposal">
       <div class="proposal-glow"></div>
       <div class="section-container">
-        <h2 class="proposal-title">Urmila...</h2>
+        <h2 class="proposal-label">Urmila...</h2>
         <h1 class="main-proposal">Will You Marry Me?</h1>
         <p class="proposal-subtitle">
           I want to make you smile again.<br />I want to hold your heart
@@ -149,43 +131,33 @@
 
         <div class="button-container">
           <button class="yes-btn" id="yesBtn">Yes, I Will! 💍</button>
-          <button class="no-btn" id="noBtn">No</button>
+          <button class="no-btn" id="noBtn">Ask me later</button>
         </div>
       </div>
     </section>
 
-    <!-- Celebration Section (Hidden, Shows on Yes) -->
-    <section class="celebration" id="celebration">
-      <div class="section-container">
-        <div class="celebration-content">
-          <div class="confetti-container" id="confettiContainer"></div>
-          <h1 class="celebration-title">YES! 💕</h1>
-          <div class="heart-explosion" id="heartExplosion"></div>
-          <h2 class="message-to-her">
-            You Just Made Me The Happiest Man Alive!
-          </h2>
-          <p class="final-message">
-            Thank you, Urmila. You just made my world perfect. I love you more
-            than words could ever express. Let's build an amazing future
-            together. Forever is not long enough for me to love you. 🌹✨
-          </p>
-          <div class="final-hearts"></div>
-        </div>
+    <!-- Celebration Modal (Surprise 4: Final) -->
+    <div class="celebration-modal" id="celebrationModal">
+      <div class="celebration-content">
+        <div class="confetti" id="confetti"></div>
+        <div class="rose-rain" id="roseRain"></div>
+        <h1 class="celebration-title">YES! 💕</h1>
+        <div class="heart-burst" id="heartBurst"></div>
+        <h2 class="message-to-her">You Just Made Me The Happiest Man Alive!</h2>
+        <p class="final-message">
+          Thank you, Urmila. You just made my world perfect.<br />
+          I love you more than words could ever express.<br />
+          Let's build an amazing future together.<br />
+          Forever is not long enough for me to love you. 🌹✨
+        </p>
+        <p class="made-with-love">Made with Love by Shubham ❤️ For Urmila</p>
       </div>
-    </section>
+    </div>
 
     <!-- Music Toggle -->
     <button class="music-toggle" id="musicToggle" title="Toggle Music">
       🎵
     </button>
-
-    <!-- Music -->
-    <audio id="bgMusic" loop>
-      <source
-        src="data:audio/wav;base64,UklGRiYAAABXQVZFZm10IBAAAAABAAEAQB8AAAB9AAACABAAZGF0YQIAAAAAAA=="
-        type="audio/wav"
-      />
-    </audio>
 
     <script src="script.js"></script>
   </body>
