--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="hero-content">
         <div class="photo-frame-container">
           <div class="photo-frame">
-            <img src="/images/urmila.jpg" alt="Urmila" />
+            <img src="images/urmila.jpg" alt="Urmila" />
             <div class="frame-glow"></div>
           </div>
           <div class="floating-hearts"></div>
