--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="photo-frame-container">
           <!-- Updated with real Urmila photo -->
           <div class="photo-frame">
-            <img src="/images/urmila.jpg" alt="Urmila" />
+            <img src="images/urmila.jpg" alt="Urmila" />
             <div class="frame-glow"></div>
           </div>
           <div class="floating-hearts"></div>
